# CL-TLS

./: .gitignore  CMakeLists.txt  README-standard-latex.md  README.md  build.sh
ascon-c-patch/crypto_hash/asconhashav12/armv7m/: hash.c
ascon-c-patch/crypto_hash/asconhashav12/opt64/: ascon.h
src/modules/ascon/: ascon_aead.c  ascon_aead.h  ascon_hash.c  ascon_hash.h
src/modules/bio/socket/: tcp_bio.c  tcp_bio.h
src/modules/cltls/: cltls_header.h
src/modules/common/: def.c  def.h  log.c  log.h  util.c  util.h
src/modules/crypto/ascon/: ascon_aead.c  ascon_aead.h
src/modules/crypto_wrapper/: aes_wrapper.c  aes_wrapper.h  ascon128a_wrapper.c  ascon128a_wrapper.h  ascon_hash_wrapper.c  ascon_hash_wrapper.h  crypto_wrapper.h  get_schemes.c  get_schemes.h  sha_wrapper.c  sha_wrapper.h
src/modules/database/: idip.c  idip.h  permitted_ids.c  permitted_ids.h
src/modules/mqtt/: mqtt_header.h
src/modules/packet/: cltls_header.h
src/modules/protocol/cltls/: application.c  application.h  client_handshake.c  client_handshake.h  client_handshaker.c  client_handshaker.h  cltls_header.c  cltls_header.h  handshake.h  handshaker.h  server_handshake.c  server_handshake.h  server_handshaker.c  server_handshaker.h
src/modules/protocol/connctl/: connctl_header.h
src/modules/protocol/establish/: establish_header.h
src/modules/protocol/kgc/: kgc_header.h
src/modules/protocol/mqtt/: mqtt_header.c  mqtt_header.h
src/modules/protocol/pkg/: pkg_header.h
src/modules/socket/: tcp.c  tcp.h
src/modules/socket/tcp/: tcp.c  tcp.h
src/modules/util/: byte_vec.c  byte_vec.h  log.c  log.h  util.c  util.h
